Feat: New domain name in swagger documentation
